added browser icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Ivan Lelmengit Portfolio</title>
+  <link rel="icon" href="assets/profile.jpg" type="image/jpg">
   <meta name="description" content="Portfolio of Ivan Lelmengit, showcasing skills, education, projects, interests, and contact information.">
     <link rel="stylesheet" href="styles.css">
 </head>
